<resources>
    <string name="app_name">Brain</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_word">Составте число</string>
    <string name="game_rules">Правила игры: перед вами будет три фигуры, две снизу и одна сверху, в двух из них будут числа. Необходимо, чтобы сумма чисел из двух нижних фигур была равна числу в верхней фигуре, для этого нужно вставить недостающее число.\n\nПример: в верхнем круге число 7, в одном из нижних знак вопроса, а в другом число 4. Значит на месте вопросительного знака должно быть число 3, потому что 3 + 4 = 7</string>
    <string name="image_brain">Image Brain</string>
    <string name="to_next_screen">To Next Screen</string>
    <string name="choose_level_text">Выберите уровень</string>
    <string name="level_easy">EASY</string>
    <string name="level_test">TEST</string>
    <string name="image_choose">Image Choose</string>
    <string name="level_middle">MIDDLE</string>
    <string name="level_hard">HARD</string>
    <string name="result_test">Result test</string>
    <string name="levels">Levels</string>
    <string name="percent_right_answer">Процент правильных ответов: %s</string>
    <string name="min_percent_right_answer">Необходимый процент правильных ответов: %s</string>
    <string name="min_count_right_answer">Необходимое количество правильных ответов: %s</string>
    <string name="count_right_answers">Ваш счет: %s</string>
    <string name="right_answers">Правильных ответов %s (минимум %s)</string>
    <string name="timer">00:00</string>
</resources>