<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="gameResult"
            type="ru.game.brain.domain.model.GameResult" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.fragment.GameFinishedFragment">

        <ImageView
            android:id="@+id/image_result_emoji"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/result_test"
            app:layout_constraintBottom_toBottomOf="@id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:requireImageResult="@{gameResult.isWin}"
            tools:src="@drawable/ic_smiley" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.4" />

        <TextView
            android:id="@+id/min_count_right_answers"
            style="@style/GameResultTextViewSettings"
            app:layout_constraintBottom_toTopOf="@id/your_count_right_answers"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guideline"
            app:layout_constraintVertical_chainStyle="packed"
            app:requireMinCountRightAnswers="@{gameResult.gameSettings.minCountOfRightAnswer}"
            tools:text="@string/min_percent_right_answer" />

        <TextView
            android:id="@+id/your_count_right_answers"
            style="@style/GameResultTextViewSettings"
            app:layout_constraintBottom_toTopOf="@id/min_percent_answer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/min_count_right_answers"
            app:requireResultCountRightAnswers="@{gameResult.countOfRightAnswer}"
            tools:text="@string/count_right_answers" />

        <TextView
            android:id="@+id/min_percent_answer"
            style="@style/GameResultTextViewSettings"
            app:layout_constraintBottom_toTopOf="@id/percent_answer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/your_count_right_answers"
            app:requireMinPercentRightAnswers="@{gameResult.gameSettings.minPercentOfRightAnswer}"
            tools:text="@string/min_percent_right_answer" />

        <TextView
            android:id="@+id/percent_answer"
            style="@style/GameResultTextViewSettings"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toTopOf="@id/button_try_again"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/min_percent_answer"
            app:requireResultPercentRightAnswers="@{gameResult}"
            tools:text="@string/percent_right_answer" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_try_again"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_button"
            android:text="@string/levels"
            android:textColor="@color/white"
            app:backgroundTint="@color/hard_light"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>